--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/800px-CSS3_logo_and_wordmark.svg.png" alt="CSS3">
             <h2>CSS3</h2>
         </a>
+    </div>
         
 </body>
 </html>
